<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="ua.chmutov.currencyexchangerapp.viewmodel.MainViewModel" />

        <variable
            name="presenter"
            type="ua.chmutov.currencyexchangerapp.MainFragment.Presenter" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/my_balances_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_balances"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="24dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_balances_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_balances_label"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="8"
            tools:listitem="@layout/balance_item" />

        <TextView
            android:id="@+id/currency_exchange_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_exchange"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_balances_recycler"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp" />
        <LinearLayout
            android:id="@+id/currency_sell_layout"
            android:layout_marginTop="24dp"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currency_exchange_label">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:src="@drawable/ic_up_arrow"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/currency_sell_text"
                        android:layout_marginStart="8dp"
                        android:layout_gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/sell"
                        android:layout_weight="1"/>
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/currency_sell_amount"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:inputType="numberDecimal"
                        app:boxBackgroundMode="none"
                        android:text="100.00"/>
                    <TextView
                        android:id="@+id/currency_sell_currency"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_marginEnd="16dp"
                        android:text="EUR"/>
                </LinearLayout>
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/divider" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/currency_receive_layout"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currency_sell_layout">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:src="@drawable/ic_down_arrow"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/currency_receive_text"
                        android:layout_marginStart="8dp"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/receive"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/currency_receive_amount"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/green"
                        android:text="+ 100.00"/>
                    <TextView
                        android:id="@+id/currency_receive_currency"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_marginEnd="16dp"
                        android:text="EUR"/>
                </LinearLayout>
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/divider" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>